Selected text object outline in Solid mode with X-Ray is not highlighted. #62479

Closed
opened 2019-03-12 08:38:05 +01:00 by Ivo van der Lans · 8 comments

System Information
system-info.txt

Blender Version
Broken: 2.80, 6b39dc7672, blender2.8 Beta, 2019-03-12

Short description of error
Selected text object outline in Solid mode with X-Ray is not highlighted.

Screenshot pointing out where it is wrong:
SolidModeTextOutlineWithXRay.png

Blend-file:
SolidModeTextOutlineWithXRay.blend

Exact steps for others to reproduce the error
(Based on the attached .blend file)
In Layout workspace, having added one or two text objects to the default blend scene, then selected all objects (hotkey A), switching to Solid view mode, switching X-Ray on, the text objects outline is not highlighted. In all other views (Wireframe, LookDev, Rendered, Solid without X-Ray) the outline is highlighted. I expected the outline of selected text objects to be highlighted similarly in all views.

**System Information** [system-info.txt](https://archive.blender.org/developer/F6808778/system-info.txt) **Blender Version** Broken: 2.80, 6b39dc7672eb, blender2.8 Beta, 2019-03-12 **Short description of error** Selected text object outline in *Solid mode* with X-Ray is not highlighted. Screenshot pointing out where it is wrong: ![SolidModeTextOutlineWithXRay.png](https://archive.blender.org/developer/F6808818/SolidModeTextOutlineWithXRay.png) Blend-file: [SolidModeTextOutlineWithXRay.blend](https://archive.blender.org/developer/F6808788/SolidModeTextOutlineWithXRay.blend) **Exact steps for others to reproduce the error** (Based on the attached .blend file) In Layout workspace, having added one or two text objects to the default blend scene, then selected all objects (hotkey `A`), switching to Solid view mode, switching X-Ray on, the text objects outline is not highlighted. In all other views (Wireframe, LookDev, Rendered, Solid *without* X-Ray) the outline *is* highlighted. I expected the outline of selected text objects to be highlighted similarly in *all* views.

Added subscriber: @Ivo

Added subscriber: @Ivo
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I confirm! It does happen only when adding a Text object, for all the other objects it works.
Screenshot.jpg

I confirm! It does happen only when adding a Text object, for all the other objects it works. ![Screenshot.jpg](https://archive.blender.org/developer/F6809374/Screenshot.jpg)
Clément Foucault was assigned by Sebastian Parborg 2019-03-12 17:35:57 +01:00
Member

screenshot.jpg
It works with today's 14 March 2019 build

![screenshot.jpg](https://archive.blender.org/developer/F6820521/screenshot.jpg) It works with today's 14 March 2019 build
Member

And again, it doesn't work in today's 2019-03-25 build:
screenshot.jpg

And again, it doesn't work in today's 2019-03-25 build: ![screenshot.jpg](https://archive.blender.org/developer/F6886309/screenshot.jpg)
Clément Foucault removed their assignment 2019-03-26 16:09:51 +01:00
Jeroen Bakker was assigned by Clément Foucault 2019-03-26 16:09:51 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

This is because of the lack of implementation in DRW_cache_object_edge_detection_get for text/surfaces/metaball.

This is because of the lack of implementation in DRW_cache_object_edge_detection_get for text/surfaces/metaball.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62479
No description provided.